--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=f06093c49b2105081788",
+    "/css/app.css": "/css/app.css?id=a12ab85f8bb3fb2076ea"
 }
